fix: Allow z-index override for Tooltip

--- a/src/components/styles/constants.less
+++ b/src/components/styles/constants.less
@@ -64,9 +64,6 @@
 // Box shadow ////////////////////////////////////////////////////////////////////
 @default-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
 
-// Z-Index ////////////////////////////////////////////////////////////////////
-@z-index-tooltip: 1000;
-
 // Break points ///////////////////////////////////////////////////////////////
 @small_screen: ~'only screen and (max-width: 992px)';
 
